src/objects/File_Upload_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_JSON__c</fullName>
        <label>Config JSON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Key__c</fullName>
        <label>Private Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Cloudinary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Files</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>File Upload Setting</label>
    <pluralLabel>File Upload Settings</pluralLabel>
</CustomObject>